--- a/project/templates/registration/login.html
+++ b/project/templates/registration/login.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %} 
 
 {% block content %} 
-<div class="is-flex is-justify-content-center">
+<div class="container">
+    <br><br>
     <form method="post">
+        {% csrf_token %}
         {{form.as_p}}
         <button type="submit">Log in</button>
     </form>
