--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -1,11 +1,5 @@
-{% extends 'base.html' %} 
+{% extends 'loggedin.html' %}
 
-{% if user.is_authenticated %} 
-<div class="container">
-    Hello {{user.username}}
-</div>
-{% else %} 
-<div class="container">
-    You need to log in pls <a href="{% url 'login' %}">Log in here.</a>
-</div>
-{% endif %}
+{% block content %}
+    hello world
+{% endblock %}
