--- a/project/templates/loggedin.html
+++ b/project/templates/loggedin.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
 </head>
 <body>
-    {% block content %} 
+    {% if user.is_authenticated %}
+        {% block content %}
 
-    {% endblock %}
+        {% endblock %}
+    {% else %}
+        <a href="{% url 'login' %}">Log in</a>
+    {% endif %}
 </body>
 </html>
