--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -1,5 +1,15 @@
 {% extends 'loggedin.html' %}
 
 {% block content %}
-    hello world
+<br><br><br>
+    <div class="is-flex is-justify-content-center">
+        <div class="box">
+            <article class="content">
+                <p>
+                    Hello there {{user.username}} <br>
+                    <a href='{% url "logout" %}'>Log out</a>
+                </p>
+            </article>
+        </div>
+    </div>
 {% endblock %}
